yoshimi 1.5.7 rc2

2013-3-11 Will
* Fixed regression. AddVoice modulator not changing.
* Clarified GUI voice and modulator selection.
* Set version as 1.5.7 rc2

2018-3-10 Will
* Reverted incorrect change to DynamicTooltip.cpp
* Renamed overloaded show( to dynshow(
* Completely revised copyFile( function.
* All part areas now show kit status, number and names.
* Set version as 1.5.7 rc1

2018-3-9 Will
* Refined Window title names.
* GUI correct when MIDI volume and expression disabled.
* Vector UI tracks changed number of available parts.

2018-3-8 Will
* BugFix: Vector control not working.
  Off by one error :(
* Improved Vector GUI behaviour.
* BugFix: Config GUI was getting out of date.
  New switches and controls not updated with state.

2018-3-4 Will.
* CLI direct access can now read VU levels.

2018-3-3 Will
* Quieted some unused code till it's developed.
* Small improvements to Add and Pad GUIs.

2018-3-2 Will
* Small change to shortcuts.
* Added entry point for dynamic subnote harmonic change.
  No idea how to actually change it though :(

2018-2-28 Will
* Implemented defaults for part author and copyright.
  Normal left button loads, Ctrl + left button saves.
* Implmented shortcuts for add, sub, pad editors.
  Left key - only if enabled.
  Right key - enables and opens.
  Individual voices not done yet.
* Implmented shortcuts for part kit and effects.

2018-2-26 Will
* Added missing attributions to previous commit :(
* Optimised part compute.
  Removed unnecessary memory clearing and made per-part
  temporary allocations general ones.
* Minor code cleanups.

2018-2-25 Will + Kristian
* Merged in effects interpolations from Kristian.
* Changed instrument name font to Helvetica (not bold).

2018-2-23 Will
* Reverted LV2 buffer size change pending investigation.
  was commit: cf7c6e746239e90069a599a966aecbd5ba4f9f6e
* Distortion and Alienwah limits now track preset number.
* Remaining effects limits now track preset number.

2018-2-21 Will