@@ -1,0 +1,17 @@
+The AddSynth voices and modulators have extremely complex relationships!
+
+The names of the voice and modulator oscillator selections have been changed, as previously they were very confusing. Also the oscillator selectors for voice/modulator 1 have all been greyed out, as they don't do anything. You can only ever select Internal/Local, or one from a lower numbered voice.
+
+The modulator numbers are syncronised to the voice numbers, so Mod. 3 will be defined by the settings in Voice 3 modulation editor.
+
+It's important to understand that oscillators always exist even if they aren't used!
+
+If you set up voice 2 as a square wave, and voice 1 as a triangle wave then set voice 3 to voice 2, voice 3 will get a square wave.
+
+If you then set voice 2 to voice 1, voice 2 will get a triangle wave but voice 3 will still get a square wave.
+
+Voice 3 can use the oscillator from voice one, even if voice 1 is switched off.
+
+Modulator 3 can use the oscillator from modulator 1 even if modulator 1 is switched off, but modulator 3 can't directly use voice 1 if voice 1 is switched off.
+
+However, if voice 2 is using the oscillator from voice 1, and modulator 3 is using voice 2, it will actually get voice 1 oscillator, even if voice 1 is switched off!
